.metadata/.plugins/org.eclipse.cdt.ui/sensorMod_test.build.log
11:59:11 **** Auto Build of configuration Debug for project sensorMod_test ****
make all 
Building file: ../src/sensorMod_test.c
Invoking: ARM v7 Linux gcc compiler
arm-linux-gnueabihf-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/sensorMod_test.o" -MMD -MP -MF"src/sensorMod_test.d" -MT"src/sensorMod_test.o" -o "src/sensorMod_test.o" "../src/sensorMod_test.c"
../src/sensorMod_test.c: In function ‘main’:
../src/sensorMod_test.c:34:5: warning: implicit declaration of function ‘setmotor’; did you mean ‘setMotor’? [-Wimplicit-function-declaration]
     setmotor(motors_handler, );
     ^~~~~~~~
     setMotor
../src/sensorMod_test.c:34:30: error: expected expression before ‘)’ token
     setmotor(motors_handler, );
                              ^
../src/sensorMod_test.c:54:11: warning: unused variable ‘cenCurr’ [-Wunused-variable]
     float cenCurr = 36486.206;
           ^~~~~~~
src/subdir.mk:27: recipe for target 'src/sensorMod_test.o' failed
make: *** [src/sensorMod_test.o] Error 1

11:59:12 Build Finished (took 1s.152ms)

